改成restful api模式，简单改造和实现代理模式，添加swagger支持，完善readme。

--- a/sso-client/pom.xml
+++ b/sso-client/pom.xml
@@ -21,5 +21,17 @@
             <artifactId>sso-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.crazycake/shiro-redis -->
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>3.2.3</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
