--- a/sso-server/src/main/resources/application-prd.yml
+++ b/sso-server/src/main/resources/application-prd.yml
@@ -7,6 +7,8 @@ env:
     /html/**: classpath:/static/html/
     /script/**: classpath:/static/dist/script/
     /styles/**: classpath:/static/dist/styles/
+    /swagger-ui.html: classpath:/META-INF/resources/
+    /webjars/**: classpath:/META-INF/resources/webjars/
 
 spring:
   thymeleaf:
