--- a/sso-client/pom.xml
+++ b/sso-client/pom.xml
@@ -32,6 +32,18 @@
             <artifactId>shiro-redis</artifactId>
             <version>3.2.3</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.shiro</groupId>
+                    <artifactId>shiro-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
